--- a/css/styles.css
+++ b/css/styles.css
@@ -708,6 +708,7 @@ h2 {
     text-align: center; 
 }
 .footer-logo {
+    display: inline-block;
     margin-bottom: 16px;
     margin-right: 86px;
     margin-left: 86px;
@@ -746,6 +747,8 @@ ul {
 
 img {
     display: block;
+    max-width: 100%;
+    height: auto;
 }
 h1,h2  {
     margin: 0;
@@ -912,7 +915,7 @@ margin-bottom: 40px;
     gap: 40px;
     margin-top: 24px;
 }
- @media (min-width: 320px) {
+ @media screen and (webkin-min-device-pixel-rario:2), (min-width: 320px) {
     .container {
      max-width:320px; 
      padding-left: 16px;
@@ -931,6 +934,12 @@ margin-bottom: 40px;
    padding: 72px 0;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
         url(../images/Dark-bg.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../images/Dark-mb2x.jpg);
+}
+.section-page-two {
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
 .title {
     font-size: 36px;
@@ -943,17 +952,25 @@ margin-bottom: 40px;
     justify-content: center;
     align-items: center;
 }
-
+p {
+    font-weight: 500;
+}
 .text-second-page {
-font-weight: 500;
+
     font-size: 16px;
     line-height: 150%;
     
 }
+.our-team{
+    padding-bottom: 96px;
+    padding-top: 96px;
+}
 .img-portfolio {
     width: 288px;
     height: 280px;
+  
 }
+
 ul {
     display: flex;
     flex-wrap:wrap;
@@ -975,11 +992,13 @@ ul {
     display: block;
     flex-wrap: wrap;
 }
-.footer-container-icons {
-    padding: 72px 56px;
-}
+ .footer-container-icons {
+    margin: 72px 56px;
+  
+ } 
 } 
-@media (min-width:768px) { 
+
+@media sreen and (webkin-min-device-pixel-rario:2), (min-width:768px) { 
     .mobile-menu {
         display: none;
     }
@@ -1022,7 +1041,9 @@ ul {
     height: 436px;
     display: flex;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-            url(../images/dark.jpg);
+            url(../images/dark.jpg),;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../images/Dark-bg2x.jpg);
     justify-content: center;
     text-align: center;
     justify-items: center;
@@ -1077,11 +1098,17 @@ margin: 0;
    .title-form-footer {
     text-align: start;
    }
+   .email-footer-input {
+    width: 288px;
+   }
  }
 
 @media  (min-width: 1140px) {
     .container {
         max-width: 1158px;
+    }
+    p {
+        font-weight: 400;
     }
     .address {
         font-size: 16px;
