--- a/css/styles.css
+++ b/css/styles.css
@@ -18,8 +18,10 @@ body {
         --white: #fff;
         --dairy: #fcfcfc;
       
+
+        --font-family: "Roboto", sans-serif;
         --second-family: "Raleway", sans-serif;
-    }
+      }
         
 a {
 text-decoration: none;
@@ -99,11 +101,7 @@ text-decoration: none;
     color: var(--ocean);
 }
  nav { 
-   
-    display: flex;
-    padding-top: 24px;
-    padding-bottom: 24px;
-            
+    display: flex;      
 } 
 .header {
     border-bottom: 1px solid #e7e9fc;
@@ -137,10 +135,11 @@ header .container {
         /* padding-top: 188px;
         padding-bottom: 188px; */
         background-image:linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
-        /* max-width: 1440px; */
+        max-width: 1440px;
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
+
     }
 
  .title {
@@ -453,6 +452,7 @@ overflow: hidden;
     color: var(--navy-blue);
     margin-bottom: 8px;
     padding-top: 0;
+    margin-top: 0;
 }
 
 ul {
@@ -466,6 +466,7 @@ ul {
     letter-spacing: 0.02em;
     text-align: center;
     color: var(--navy-blue);
+
 }
 .title-img { 
         text-transform: capitalize;
@@ -525,9 +526,10 @@ p {
 .container-team {
     padding-left: 0;
     justify-content: center;
+   
 }
 .div-team {
-    padding: 32px 0;
+    padding: 32px 16px;
 }
 
 .list-team {
@@ -561,9 +563,9 @@ h2 {
         color: var(--navy-blue);
         background-color: var(--white);
         margin-bottom: 8px;
+        margin-top: 0;
 }
 .position {
-        padding: 8px 52px 8px;
         font-family: var(--font-family);
         font-weight: 400;
         font-size: 16px;
@@ -572,6 +574,7 @@ h2 {
         text-align: center;
         color: var(--slate);
         background-color: var(--white);
+        margin-bottom: 8px;
 }
 
 
@@ -582,7 +585,7 @@ h2 {
 .portfolio {
     display: flex;
     flex-wrap: wrap;
-    /* gap: 48px 24px; */
+     gap: 72px 24px; 
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -715,12 +718,11 @@ h2 {
 }
 .container {
     /* width: 1158px; */
-   
-    padding-left: 16px;
-    padding-right: 16px;
     margin:  auto;
     padding-left: auto;
     padding-right: auto;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 .header-container {
@@ -781,8 +783,8 @@ font-family: var(--font-family);
 .email-footer-input {
     border: 1px solid var(--white);
     border-radius: 4px;
-    width: 264px;
     height: 40px;
+    width: 288px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background-color: transparent;
     padding-left: 16px;
@@ -896,7 +898,10 @@ border-radius: 100%;
 margin-bottom: 40px;
 }
 .li-address {
-    padding-bottom: 24px;
+   margin-bottom: 24px;
+}
+.li-address.two {
+    margin-bottom: 48px;
 }
 .menu-contact {
     font-family: var(--font-family);
@@ -913,15 +918,10 @@ margin-bottom: 40px;
 }
 .menu-link {
     gap: 40px;
-    margin-top: 24px;
 }
  @media screen and (webkin-min-device-pixel-rario:2), (min-width: 320px) {
     .container {
      max-width:320px; 
-     padding-left: 16px;
-     margin-left: auto;
-     margin-right: auto;
-     padding-right: 16px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .ul-address {
@@ -944,13 +944,12 @@ margin-bottom: 40px;
 .title {
     font-size: 36px;
     line-height: 111%;
-    margin: 0;
-   padding-bottom: 72px;
- 
+    margin: 0; 
     flex-wrap: wrap;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 72px;
 }
 p {
     font-weight: 500;
@@ -979,23 +978,19 @@ ul {
 }
 .points {
     text-align: center;
-    margin: 8px 0;
     font-weight: 700;
     font-size: 36px;
-    line-height: 111%
+    line-height: 111%;
+    margin-bottom: 8px;
 }
 .container-team{
-    margin: 8px;
     row-gap: 72px;
 }
 .container-footer {
     display: block;
     flex-wrap: wrap;
 }
- .footer-container-icons {
-    margin: 72px 56px;
-  
- } 
+
 } 
 
 @media sreen and (webkin-min-device-pixel-rario:2), (min-width:768px) { 
@@ -1014,13 +1009,13 @@ ul {
 }
 .ul-header{
     display: flex;
-        align-items: center;
-        gap: 40px;
+    align-items: center;
+   gap: 40px;
 }
 .ul-address {
-            display: flex;
-                flex-direction: column;
-                gap: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
 }
 
 .address {
@@ -1066,16 +1061,21 @@ ul {
    }
    .container-team {
     margin: 0;
-   
     row-gap: 64px;
     column-gap: 24px;
    }
    .container-footer {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
-margin-left: 92px;
-   }
+    padding-left: 108px; 
+    padding-right: 108px;
+    row-gap: 72px;
+    column-gap: 24px;
+}
+.footer-container-icons {
+    margin: 0;
+    padding: 0;
+}
    .container-form-footer {
 margin: 0;
    }
@@ -1099,7 +1099,7 @@ margin: 0;
     text-align: start;
    }
    .email-footer-input {
-    width: 288px;
+    width: 264px;
    }
  }
 
@@ -1137,7 +1137,10 @@ margin: 0;
 .list-portfolio {
     width: calc((100% - 48px) / 3);
 }
-    .container-icons {
+.portfolio {
+    gap: 48px 24px;
+}
+ .container-icons {
             border: 1px solid var(--light-slate);
             border-radius: 4px;
             width: 264px;
@@ -1150,15 +1153,14 @@ margin: 0;
             justify-content: center;
             margin-bottom: 8px;
         }
-    .container-form-footer {
-        margin-left: 80px;
-       
-        }
     .container-footer {
          flex-wrap: nowrap;
-        
-    }
-    .text-conteiner {
-        margin-right: 120px;
-    }
+         margin: 0;
+         padding: 0 156px;
+         gap: 80px;
+            }
+.footer-container {
+    margin-right: 40px;
+}
+    
 }
