--- a/css/styles.css
+++ b/css/styles.css
@@ -1111,6 +1111,9 @@ margin: 0;
     .container {
         max-width: 1158px;
     }
+    .header-container {
+        min-height: 72px;
+    }
     p {
         font-weight: 400;
     }
