--- a/css/styles.css
+++ b/css/styles.css
@@ -518,10 +518,13 @@ p {
 }
 
 .ul-icons {
-    padding: 0; 
     display: flex;
+    align-items: center;
     justify-content: center;
+    flex-direction: row;
+    margin-top: 8px;
     gap: 24px;
+    flex-wrap: nowrap;
 }
 .container-team {
     padding-left: 0;
@@ -585,7 +588,7 @@ h2 {
 .portfolio {
     display: flex;
     flex-wrap: wrap;
-     gap: 72px 24px; 
+    gap: 72px 24px; 
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -653,8 +656,8 @@ h2 {
     padding-bottom: 96px;
 }
 
-.social-media  {
-   text-align: center;
+    .social-media  {
+        text-align: center;
         font-family: var(--font-family);
         font-weight: 500;
         font-size: 16px;
@@ -741,11 +744,11 @@ h2 {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-ul {
-    /* display: flex;    */
-    /* gap: 24px; */
-    margin: 0;  
-    }
+ul, ol {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
 
 img {
     display: block;
