--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,6 @@ header .container {
     border-bottom: 1px solid var(--cornflower);
     max-width: 1158px;
     justify-content: space-between;
-    height: 72px;
 }
 
 .section-page-one {
@@ -523,6 +522,7 @@ p {
     align-items: center;
     justify-content: center;
     flex-direction: row;
+    margin-top: 8px;
     gap: 24px;
     flex-wrap: nowrap;
 }
@@ -928,6 +928,9 @@ margin-bottom: 40px;
     .container {
      max-width:320px; 
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    header .container {
+        height: auto;
     }
     .ul-address {
         display: none;
